# commit-provenance

./: .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
commit_provenance/: __init__.py  __main__.py  cli.py  model.py  report.py  scoring.py
docs/: first-pr.md
reports/: commit-provenance-v0.1.jsonl
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
tests/: test_cli.py  test_report.py
