[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "commit-provenance"
version = "0.1.0"
description = "Commit provenance report and signing workflow scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AthenaTheOwl" }]
dependencies = []

[project.scripts]
git-provenance = "commit_provenance.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["commit_provenance"]

[dependency-groups]
dev = [
  "pytest>=8.2",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.commit_provenance]
report_artifact = "reports/commit-provenance-v0.1.jsonl"
